--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
     "psr-4": {
       "molchanovvg\\ping\\": ""
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0.x-dev"
+    }
   }
 }
